--- a/estilos.css
+++ b/estilos.css
@@ -135,7 +135,7 @@ nav a{
 #acerca{
     padding-top: 80px;
     width: 100%;
-    height: 760px;
+    height: 100%;
     align-items: center;
     justify-content: center;
 }
