--- a/estilos.css
+++ b/estilos.css
@@ -185,7 +185,7 @@ h2{
 #beneficios{
     background-color: #F6F3F3;
     width: 100%;
-    height: 760px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
