--- a/estilos.css
+++ b/estilos.css
@@ -135,7 +135,7 @@ nav a{
 #acerca{
     padding-top: 80px;
     width: 100%;
-    height: 100%;
+    height: 760px;
     align-items: center;
     justify-content: center;
 }
@@ -185,7 +185,7 @@ h2{
 #beneficios{
     background-color: #F6F3F3;
     width: 100%;
-    height: 100%;
+    height: 760px;
     display: flex;
     flex-direction: column;
     align-items: center;
