--- a/estilos.css
+++ b/estilos.css
@@ -77,6 +77,7 @@ nav a{
     background-position: center center;
     background-size: cover;
     height: 760px;
+    widht: 100%;
 }
 .header{
     width: 670px;
