--- a/estilos.css
+++ b/estilos.css
@@ -77,10 +77,10 @@ nav a{
     background-position: center center;
     background-size: cover;
     height: 760px;
-    width: 125%;
+    width: 100%;
 }
 .header{
-    width: 125%;
+    width: 100%;
     height: 318px;
     margin: 131px 325px 223px 325px;
     padding: 20px 40px;
@@ -122,7 +122,7 @@ nav a{
     color: white;
     font-family: Arial;
     font-size: 30px;
-    font-weight: 600;
+    font-weight: 600px;
 }
 
 
@@ -135,7 +135,7 @@ nav a{
 
 #acerca{
     padding-top: 80px;
-    width: 125%;
+    width: 100%;
     height: 760px;
     align-items: center;
     justify-content: center;
@@ -185,7 +185,7 @@ h2{
 
 #beneficios{
     background-color: #F6F3F3;
-    width: 125%;
+    width: 100%;
     height: 760px;
     display: flex;
     flex-direction: column;
@@ -246,7 +246,7 @@ figcaption{
 
 
 #testimonios{
-    width: 125%;
+    width: 100%;
     height: 760px;
     display: flex;
     flex-direction: column;
