--- a/estilos.css
+++ b/estilos.css
@@ -106,6 +106,7 @@ nav a{
     width: 600px;
     border: 7px solid white;
     border-radius: 25px;
+    margin: 0 auto;
 }
 .fashion{
     margin: 0px;
